--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --primary-color: #3F51B5;
+    --secondary-color: #FFFFFF;
+    --background-color: #d3d3d3;
+    --text-primary-color: #212121;
+    --text-secondary-color: #757575;
+    --highlight-color: #979797;
+    --danger-color: #E53935;
+    --font-family: 'Arial', sans-serif;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    font-family: var(--font-family) !important;
+    background-color: var(--background-color) !important;
+    color: var(--text-primary-color)!important;
+  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
