--- a/src/app/modulos/modulo-compartido/dynamic-table/dynamic-table.component.html
+++ b/src/app/modulos/modulo-compartido/dynamic-table/dynamic-table.component.html
@@ -1,7 +1,7 @@
-<table>
+<table style="text-transform: uppercase;" >
     <thead>
       <tr>
-        <th *ngFor="let column of columns"  [ngClass]="{ 'hidden': !isColumnVisible(column) }">{{ column }}</th>
+        <th *ngFor="let column of columns"  [ngClass]="{ 'hidden': !isColumnVisible(column) }" >{{ column }}</th>
       </tr>
     </thead>
     <tbody>
@@ -9,7 +9,7 @@
           (click)="selectObject(object)" 
           [class.selected]="object === selectedObject"
           style="cursor: pointer;">
-          <td *ngFor="let column of columns" [hidden]="!isColumnVisible(column)">{{ object[column] }}</td>
+          <td *ngFor="let column of columns" [hidden]="!isColumnVisible(column)" >{{ object[column] }}</td>
         </tr>
     </tbody>
 </table>
