--- a/src/app/modulos/perfil/mi-perfil/mi-perfil.component.html
+++ b/src/app/modulos/perfil/mi-perfil/mi-perfil.component.html
@@ -13,6 +13,6 @@
         <app-user-card  [usuario]="this.user"></app-user-card>   
     </div>
 }
-<!-- @if(misHorarios){
+@if(misHorarios){
     <app-mis-horarios [usuario]="this.user"></app-mis-horarios>
-} -->
+}
