--- a/src/app/modulos/perfil/mis-horarios/mis-horarios.component.html
+++ b/src/app/modulos/perfil/mis-horarios/mis-horarios.component.html
@@ -1,16 +1,25 @@
 <div class="flex flex-col items-center p-4">
     <h1 class="text-3xl font-bold mb-4">Selección de Horarios</h1>
     <div class="w-full max-w-4xl">
-      <div class="mb-4">
-        <label for="especialidad" class="block text-sm font-medium text-gray-700">
-          Especialidad
-        </label>
-        <select
-        id="especialidad"
-        class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md">
-        <option *ngFor="let especialidad of usuario.Especialidades">{{ especialidad.especialidad }}</option>
-      </select>
-      </div>
+      
+      @if(this.loading){
+        <spinner></spinner>
+      }@else{
+        <div class="mb-4">
+          <label for="especialidad" class="block text-sm font-medium text-gray-700">
+            Especialidad
+          </label>
+            <select
+            id="especialidad"
+            class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md"
+            [(ngModel)]="selectedEspecialidad" (change)="especialidadChange()">
+            <option *ngFor="let especialidad of usuario.Especialidades" [value]="especialidad.especialidad">
+              {{ especialidad.especialidad }}
+            </option>
+          </select>
+        </div>
+      }
+   
       <div class="overflow-x-auto">
         <table class="min-w-full border-collapse border border-gray-200">
           <thead>
@@ -26,18 +35,20 @@
                 *ngFor="let hour of horas"
                 class="border border-gray-200 p-2"
                 [ngClass]="{
-                  'bg-blue-500': isSelected(day, hour),
-                  'bg-blue-100': !isSelected(day, hour)
+                  'bg-blue-500': isSelected(day, hour) && !horarioOcupado(day, hour),
+                  'bg-blue-100': !isSelected(day, hour) && !horarioOcupado(day, hour) ,
+                  'bg-gray-500': horarioOcupado(day, hour)
                 }"
                 (mousedown)="handleMouseDown(day, hour)"
                 (mouseenter)="handleMouseEnter(day, hour)"
                 (mouseup)="handleMouseUp()"
+                [attr.disabled]="!isSelectable(day, hour) ? true : null"
               ></td>
             </tr>
           </tbody>
         </table>
       </div>
-      <button class="mt-4 px-4 py-2 bg-blue-600 text-white rounded">Guardar Horarios</button>
+      <button (click)="guardarHorarios()" class="mt-4 px-4 py-2 bg-blue-600 text-white rounded">Guardar Horarios</button>
     </div>
   </div>
   
