--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
     --background-color: #d3d3d3;
     --text-primary-color: #212121;
     --text-secondary-color: #757575;
-    --highlight-color: #979797;
+    --highlight-color: #7FACF0;
     --danger-color: #E53935;
     --font-family: 'Arial', sans-serif;
 }
