--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 @if(user)
 {   
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary">
+    <nav class="navbar navbar-expand-lg  ">
         <div class="container-fluid ">
           <a class="navbar-brand" href="/">Clinica Mejias</a>
     
