--- a/src/app/modulos/gestion-usuarios/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/modulos/gestion-usuarios/gestion-usuarios/gestion-usuarios.component.html
@@ -7,22 +7,30 @@
     <div class="search-container">
       <mat-icon class="search-icon">search</mat-icon>
       <input
-        matInput
-        type="search"
-        placeholder="Buscar usuarios..."
-        [(ngModel)]="this.searchQuery"
-        (ngModelChange)="onSearchQueryChange()"/>
+      class="search-input"
+      matInput
+      type="search"
+      placeholder="Buscar usuarios..."
+      [(ngModel)]="this.searchQuery"
+      (ngModelChange)="onSearchQueryChange()"/>
     </div>
 </mat-toolbar>    
 
-  
-<div class="gestion-usuarios-container">
-    <h2>Gestión de Usuarios</h2>
-    <app-dynamic-table [objects]="usersParaTabla" (objectSelected)="mostrarUsuarioEdit($event)"></app-dynamic-table>
-    @if (openViewUser) {
-        <app-user-card [usuario]="userSelected" [vistaAdmin]="true" ></app-user-card>
-    }
-    @if(openUserForm){
-     <app-form-usuario rol="administrador"></app-form-usuario>
-    }
+<div class="container-usuarios">
+    <div class="gestion-usuarios-container">
+        <h2>Gestión de Usuarios</h2>
+        @if(loading){
+          <spinner></spinner>
+        }
+        <app-dynamic-table [objects]="usersParaTabla" (objectSelected)="mostrarUsuarioEdit($event)"></app-dynamic-table>
+        @if (openViewUser) {
+            <app-user-card [usuario]="userSelected" [vistaAdmin]="true" ></app-user-card>
+        }
+        @if(openUserForm){
+          <app-form-usuario rol="administrador"></app-form-usuario>
+        }
+    </div>
+    
+     
+   
 </div>
