--- a/src/app/modulos/perfil/mi-perfil/mi-perfil.component.css
+++ b/src/app/modulos/perfil/mi-perfil/mi-perfil.component.css
@@ -1,39 +1,44 @@
+body {
+    font-family: var(--font-family);
+    background-color: var(--background-color);
+    color: var(--text-primary-color);
+}
 
 .container-user-card {
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f9f9f9; 
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    background-color: var(--secondary-color); /* Background color for the card */
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 25vw;
     margin: 0 auto;
     margin-top: 4vh;
-    font-family: 'Arial', sans-serif; 
+    font-family: var(--font-family);
 }
+
 .mat-toolbar {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 .mat-toolbar * {
-  margin: 15px;
+    margin: 15px;
 }
-  
-  
+
 .Titulo {
-    font-size: 24px; 
+    font-size: 24px;
     font-weight: bold;
-    color: #2c3e50;
+    color: var(--text-primary-color);
     text-align: center;
     margin-bottom: 20px;
-    border-bottom: 2px solid #2c3e50; 
-    padding-bottom: 10px; 
+    border-bottom: 2px solid var(--text-primary-color);
+    padding-bottom: 10px;
 }
 
-
 .selected {
-    color: #2980b9; 
-    border-bottom: 2px solid #2980b9; 
-  }
+    color: var(--primary-color);
+    border-bottom: 2px solid var(--primary-color);
+}
