--- a/src/app/modulos/registro/registro/registro.component.html
+++ b/src/app/modulos/registro/registro/registro.component.html
@@ -1,23 +1,22 @@
+<div class="container-registro">
+    <div class="container-form">
 
-<div class="container-form">
-
-    <div class="container-checks">
-        <label class="m-3 checkbox-label">
-            <input type="checkbox" [(ngModel)]="roles.especialista" (change)="onCheckboxChange($event)" name="especialista" id="especialista">
-            Especialista
-        </label>
-        <label class="m-3 checkbox-label">
-            <input type="checkbox" [(ngModel)]="roles.paciente" (change)="onCheckboxChange($event)" name="paciente" id="paciente">
-            Paciente
-        </label>
-   
-    </div>
+        <div class="container-checks">
+            <label class="m-3 checkbox-label">
+                <input type="checkbox" [(ngModel)]="roles.especialista" (change)="onCheckboxChange($event)" name="especialista" id="especialista">
+                Especialista
+            </label>
+            <label class="m-3 checkbox-label">
+                <input type="checkbox" [(ngModel)]="roles.paciente" (change)="onCheckboxChange($event)" name="paciente" id="paciente">
+                Paciente
+            </label>
+        </div>
+        
+        <app-form-usuario 
+          [rol]="selectedRole"  
+          (getUsuario)="getUsuario($event)" 
+          *ngIf="ocultar">
+        </app-form-usuario>
     
-    
-    <app-form-usuario 
-      [rol]="selectedRole"  
-      (getUsuario)="getUsuario($event)" 
-      *ngIf="ocultar">
-    </app-form-usuario>
-
-  </div>
+     </div>
+</div>
