--- a/src/app/modulos/usuario/form-usuario/form-usuario.component.css
+++ b/src/app/modulos/usuario/form-usuario/form-usuario.component.css
@@ -1,11 +1,20 @@
-/* Estilos para el formulario */
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 form {
-    max-width: 600px;
     margin: 0 auto;
-    padding: 20px;
+    width: 100%;
+    padding: 40px;
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .form-row{
+    display: flex;
+    flex-direction: row !important;
   }
   
   /* Estilos para los campos del formulario */
