--- a/src/app/modulos/usuario/form-usuario/form-usuario.component.html
+++ b/src/app/modulos/usuario/form-usuario/form-usuario.component.html
@@ -1,10 +1,12 @@
-<!-- register.component.html -->
 
-<div class="container m-5">
-    <h2>Registro</h2>
-    <form [formGroup]="registerForm" (ngSubmit)="crearUsuario()">
-      <!-- Common Fields -->
-      <div class="form-group">
+  <!-- register.component.html -->
+
+<div class="container m-2">
+  <h2>Registro</h2>
+  <form [formGroup]="registerForm" class="form" (ngSubmit)="crearUsuario()">
+    <!-- Common Fields -->
+    <div class="form-row">
+      <div class="form-group col-md-6 m-2">
         <label for="nombre">Nombre</label>
         <input type="text" id="nombre" formControlName="Nombre" class="form-control" required>
         <div *ngIf="registerForm.get('Nombre')?.invalid && registerForm.get('Nombre')?.touched">
@@ -12,15 +14,17 @@
         </div>
       </div>
   
-      <div class="form-group">
+      <div class="form-group col-md-6 m-2">
         <label for="apellido">Apellido</label>
         <input type="text" id="apellido" formControlName="Apellido" class="form-control" required>
         <div *ngIf="registerForm.get('Apellido')?.invalid && registerForm.get('Apellido')?.touched">
           <small class="text-danger">Apellido es requerido.</small>
         </div>
       </div>
+    </div>
   
-      <div class="form-group">
+    <div class="form-row">
+      <div class="form-group col-md-6 m-2">
         <label for="edad">Edad</label>
         <input type="number" id="edad" formControlName="Edad" class="form-control" required>
         <div *ngIf="registerForm.get('Edad')?.invalid && registerForm.get('Edad')?.touched">
@@ -28,15 +32,17 @@
         </div>
       </div>
   
-      <div class="form-group">
+      <div class="form-group col-md-6 m-2">
         <label for="dni">DNI</label>
         <input type="text" id="dni" formControlName="Dni" class="form-control" required>
         <div *ngIf="registerForm.get('Dni')?.invalid && registerForm.get('Dni')?.touched">
           <small class="text-danger">DNI es requerido.</small>
         </div>
       </div>
+    </div>
   
-      <div class="form-group">
+    <div class="form-row">
+      <div class="form-group col-md-6 m-2">
         <label for="email">Email</label>
         <input type="email" id="email" formControlName="Email" class="form-control" required>
         <div *ngIf="registerForm.get('Email')?.invalid && registerForm.get('Email')?.touched">
@@ -44,61 +50,66 @@
         </div>
       </div>
   
-      <div class="form-group">
+      <div class="form-group col-md-6 m-2">
         <label for="password">Password</label>
         <input type="password" id="password" formControlName="Password" class="form-control" required>
         <div *ngIf="registerForm.get('Password')?.invalid && registerForm.get('Password')?.touched">
           <small class="text-danger">Password es requerido.</small>
         </div>
       </div>
-      
-      <!-- Paciente Specific Fields -->
-      <div *ngIf="this.rol == 'paciente'">
-        <div class="form-group">
-          <label for="obraSocial">Obra Social</label>
-          <input type="text" id="obraSocial" formControlName="ObraSocial" class="form-control" required>
-          <div *ngIf="registerForm.get('ObraSocial')?.invalid && registerForm.get('ObraSocial')?.touched">
-            <small class="text-danger">Obra Social es requerida.</small>
-          </div>
+    </div>
+  
+    <!-- Paciente Specific Fields -->
+    <div *ngIf="this.rol == 'paciente'" class="form-row">
+      <div class="form-group col-md-6">
+        <label for="obraSocial">Obra Social</label>
+        <input type="text" id="obraSocial" formControlName="ObraSocial" class="form-control" required>
+        <div *ngIf="registerForm.get('ObraSocial')?.invalid && registerForm.get('ObraSocial')?.touched">
+          <small class="text-danger">Obra Social es requerida.</small>
         </div>
-  
-        
       </div>
+    </div>
   
-  
-        <div *ngIf="this.rol == 'especialista'">
-            <div class="form-group">
-              <label for="especialidad">Especialidad</label>
-              <select id="especialidad" formControlName="Especialidades" class="form-control" multiple>
-                <option *ngFor="let especialidad of especialidades" [value]="especialidad.especialidad">{{ especialidad.especialidad }}</option>
-              </select>
-              <button type="button" class="btn btn-sm btn-primary mt-2" (click)="toggleCampoNuevaEspecialidad()">Nueva especialidad</button>
-            </div>
-            <div class="form-group" *ngIf="mostrarCampoNuevaEspecialidad" @enterAnimation>
-              <label for="nuevaEspecialidad">Agregar nueva especialidad</label>
-              <input id="nuevaEspecialidad" [(ngModel)]="nuevaEspecialidad"  [ngModelOptions]="{standalone: true}" class="form-control" placeholder="Nueva especialidad">
-              <button type="button" class="btn btn-primary mt-2" (click)="agregarEspecialidad()">Agregar Especialidad</button>
-              
-            </div>
-        
-          <div class="form-group">
-            <label for="imagen2">Imagen de Perfil</label>
-            <input type="file" id="imagen2" (change)="onFileSelected($event)" formControlName="Imagen2" class="form-control"  required>
-            <div *ngIf="registerForm.get('Imagen2')?.invalid && registerForm.get('Imagen2')?.touched">
-              <small class="text-danger">Imagen de perfil son requeridas.</small>
-            </div>
-          </div>
-
+    <div *ngIf="this.rol == 'especialista'" class="form-row">
+      <div class="form-group col-md-6">
+        <label for="especialidad">Especialidad</label>
+        <select id="especialidad" formControlName="Especialidades" class="form-control" multiple>
+          <option *ngFor="let especialidad of especialidades" [value]="especialidad.especialidad">{{ especialidad.especialidad }}</option>
+        </select>
+        <button type="button" class="btn btn-sm btn-primary mt-2" (click)="toggleCampoNuevaEspecialidad()">Nueva especialidad</button>
       </div>
-
+      <div class="form-group col-md-6" *ngIf="mostrarCampoNuevaEspecialidad" @enterAnimation>
+        <label for="nuevaEspecialidad">Agregar nueva especialidad</label>
+        <input id="nuevaEspecialidad" [(ngModel)]="nuevaEspecialidad" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="Nueva especialidad">
+        <button type="button" class="btn btn-primary mt-2" (click)="agregarEspecialidad()">Agregar Especialidad</button>
+      </div>
+    
+    </div>
+  
+    <div class="form-row">
       <div class="form-group">
         <label for="imagen">Imagen de Perfil</label>
-        <input type="file" id="imagen" (change)="onFile2Selected($event)"  formControlName="Imagen" class="form-control" required>
+        <input type="file" id="imagen" (change)="onFile2Selected($event)" formControlName="Imagen" class="form-control" required>
         <div *ngIf="registerForm.get('Imagen')?.invalid && registerForm.get('Imagen')?.touched">
           <small class="text-danger">Imagen de perfil es requerida.</small>
         </div>
       </div>
+    </div>
+    <div class="form-row">
+      <div *ngIf="this.rol == 'especialista'" class="form-group">
+        <label for="imagen2">Segunda imagen </label>
+        <input type="file" id="imagen2" (change)="onFileSelected($event)" formControlName="Imagen2" class="form-control"  required>
+        <div *ngIf="registerForm.get('Imagen2')?.invalid && registerForm.get('Imagen2')?.touched">
+          <small class="text-danger">Imagen de perfil son requeridas.</small>
+        </div>
+      </div>
+    </div>
+ 
+    <button type="submit" class="btn btn-primary mt-5">Registrar</button>
+  </form>
+  
+</div>
 
-      <button type="submit" class="btn btn-primary mt-5">Registrar</button>
-    </form>
-  </div>
+
+
+
