--- a/src/app/modulos/turnos/solicitar-turno/solicitar-turno.component.css
+++ b/src/app/modulos/turnos/solicitar-turno/solicitar-turno.component.css
@@ -1,53 +1,94 @@
-/* Estilos para el formulario */
-form {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Estilos para los campos del formulario */
-  form div {
-    margin-bottom: 15px;
-  }
-  
-  /* Estilos para las etiquetas */
-  form label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  /* Estilos para los inputs y select */
-  form input,
-  form select {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  /* Estilos para el botón */
-  form button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  form button:disabled {
-    background-color: #ccc;
-  }
-  
-  form button:not(:disabled):hover {
-    background-color: #0056b3;
-  }
-  
+/* Estilos para los botones de turno */
+.turno {
+  background-color: var(--secondary-color);
+  border: 2px solid var(--primary-color);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s, transform 0.2s;
+  cursor: pointer;
+  width: 150px; /* Ajusta el ancho según sea necesario */
+}
+.turnos{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.turno:hover {
+  background-color: var(--highlight-color);
+  transform: scale(1.05);
+}
+
+.turno-date {
+  font-size: 1rem;
+  color: var(--text-primary-color);
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background-color: var(--background-color);
+  font-family: var(--font-family);
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+  color: var(--text-primary-color);
+}
+
+.subtitulo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: var(--text-primary-color);
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Espacio entre los botones */
+}
+
+.especialista, .especialidad, .slot {
+  background-color: var(--secondary-color);
+  border: 2px solid var(--primary-color);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s, transform 0.2s;
+  cursor: pointer;
+}
+
+.especialista:hover, .especialidad:hover, .slot:hover {
+  background-color: var(--highlight-color);
+  transform: scale(1.05);
+}
+
+.selected {
+  border-color: var(--primary-color);
+}
+
+.especialista-img, .especialidad-img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  margin-bottom: 0.5rem;
+}
+
+.especialista-name, .especialidad-name, .turno-date {
+  font-size: 1rem;
+  color: var(--text-primary-color);
+  text-align: center;
+}
