--- a/src/app/modulos/turnos/solicitar-turno/solicitar-turno.component.html
+++ b/src/app/modulos/turnos/solicitar-turno/solicitar-turno.component.html
@@ -1,36 +1,53 @@
-  <!-- <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div>
-        <label for="especialidad">Especialidad:</label>
-        <select formControlName="especialidad" id="especialidad" (change)="onEspecialidadChange($event.target.value)">
-          <option value="">Seleccione una especialidad</option>
-          <option *ngFor="let especialidad of especialidades" [value]="especialidad">{{especialidad}}</option>
-        </select>
-      </div>
-      <div>
-        <label for="especialista">Especialista:</label>
-        <select formControlName="especialista" id="especialista" (change)="onEspecialistaChange($event.target.value)">
-          <option value="">Seleccione un especialista</option>
-          <option *ngFor="let especialista of especialistas" [value]="especialista">{{especialista}}</option>
-        </select>
-      </div>
-      <div>
-        <label for="fecha">Fecha:</label>
-        <select formControlName="fecha" id="fecha">
-          <option value="">Seleccione una fecha</option>
-          <option *ngFor="let turno of especialista.disponibilidad" [value]="turno.fecha">{{turno.fecha}}</option>
-        </select>
-      </div>
-      <div>
-        <label for="horario">Horario:</label>
-        <select formControlName="horario" id="horario">
-          <option value="">Seleccione un horario</option>
-          <option *ngFor="let turno of ESO" [value]="turno.horario">{{turno.horario}}</option>
-        </select>
-      </div>
-      <div *ngIf="isAdmin">
-        <label for="paciente">Paciente:</label>
-        <input formControlName="paciente" id="paciente" placeholder="Nombre del paciente">
-      </div>
-      <button type="submit" [disabled]="form.invalid">Solicitar Turno</button>
-  </form> -->
+<div class="container">
+  <h1 class="title">Reserva una Cita</h1>
+
+  <select *ngIf="isAdmin" class="form-control w-50 mb-4" name="pacientes" (change)="seleccionoPaciente()" id="pacientes">
+    <option value="">Seleccionar paciente...</option>
+    <option *ngFor="let paciente of pacientes" [value]="paciente.id">{{ paciente.Nombre }} {{ paciente.Apellido }}</option>
+  </select>
   
+  @if(pacienteTurno != null){
+    <div class="grid">
+      <button
+        *ngFor="let especialista of especialistas"
+        [ngClass]="{
+          'selected': especialistaSeleccionado?.Email == especialista?.Email
+        }"
+        class="especialista"
+        (click)="seleccionEspecialista(especialista)"
+      >
+        <img [src]="especialista.Imagen" [alt]="especialista.Nombre" class="especialista-img" />
+        <span class="especialista-name">{{ especialista.Nombre}} {{especialista.Apellido}}</span>
+      </button>
+    </div>
+    <div *ngIf="especialistaSeleccionado" class="specialties">
+      <h2 class="subtitulo">Selecciona una Especialidad</h2>
+      <div class="grid">
+        <button
+          *ngFor="let especialidad of especialistaSeleccionado.Especialidades"
+          [ngClass]="{
+            'selected': especialidad?.id === especialidad.id
+          }"
+          class="especialidad"
+          (click)="seleccionEspecialidad(especialidad)"
+        >
+          <img src="/assets/estetoscopio.png" [alt]="especialidad" class="especialidad-img" />
+          <span class="especialidad-name">{{ especialidad }}</span>
+        </button>
+      </div>
+    </div>
+    <div *ngIf="especialidadSeleccionada" class="turnos">
+      <h2 class="subtitulo">Selecciona una Cita Disponible</h2>
+      <div class="grid">
+        <button
+          *ngFor="let turno of turnosDisponibles"
+          class="turno"
+          (click)="turnoSeleccionado(turno)"
+        >
+          <span class="turno-date">{{ turno.fechaFormateada }}</span>
+        </button>
+      </div>
+    </div>
+  }
+
+</div>
