--- a/src/app/modulos/welcome/welcome/welcome.component.html
+++ b/src/app/modulos/welcome/welcome/welcome.component.html
@@ -1,11 +1,17 @@
-<div class="welcome-container">
-    <h1>Bienvenidos a La Clínica Online</h1>
-    <p>Accede a nuestros servicios o regístrate para obtener una cuenta.</p>
-    
-    <div class="buttons">
-      <a class="button" routerLink="/login">Ingresar</a>
-      <a class="button" routerLink="/registro">Registrar</a>
 
+<div class="welcome-container">
+  <img class="logo" src="https://firebasestorage.googleapis.com/v0/b/trabajopracticofinallaboiv.appspot.com/o/imagenes%2FlogoHospital.png?alt=media&token=adbefb1b-0410-44be-998c-59b8295ec341" alt="">
+  <div class="cuerpo-welcome">
+    <div class="titulos">
+      <h1>Bienvenidos a La Clínica Online</h1>
+      <p>Accede a nuestros servicios o regístrate para obtener una cuenta.</p>
     </div>
+
+      <div class="buttons">
+        <a class="button btn btn-primary w-50" routerLink="/login">Ingresar</a>
+        <a class="button btn btn-primary w-50" routerLink="/registro">Registrar</a>
+      </div>
+  </div>
+  
 </div>
   
