--- a/src/app/modulos/gestion-usuarios/gestion-usuarios/gestion-usuarios.component.css
+++ b/src/app/modulos/gestion-usuarios/gestion-usuarios/gestion-usuarios.component.css
@@ -1,5 +1,4 @@
 .toolbar {
-    background-color: #b9b9b9;
     color: #ffffff;
     padding: 10px;
     display: flex;
@@ -13,7 +12,7 @@
   }
   
   .toolbar button {
-    background-color: #ffffff;
+
     color: #007bff;
     border: 1px solid #007bff;
     padding: 8px 12px;
@@ -28,7 +27,10 @@
 }
   .container-usuarios{
     display: flex;
+    justify-content: center !important;
+    align-items: center;
     flex-direction: row;
+    height: 60vh;
   }
 
 .gestion-usuarios-container{
@@ -91,4 +93,7 @@
     border-bottom: 2px solid var(--primary-color);
   }
   
+  .title-gestion{
+    margin-top: 10px;
+  }
 
