--- a/src/app/modulos/modulo-compartido/dynamic-table/dynamic-table.component.css
+++ b/src/app/modulos/modulo-compartido/dynamic-table/dynamic-table.component.css
@@ -3,6 +3,13 @@ table {
   border-collapse: collapse;
   font-family: var(--font-family);
 }
+.rounded-image {
+  width: 50px; 
+  height: 50px; 
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 
 thead {
   background-color: var(--primary-color);
