--- a/src/app/modulos/usuario/form-usuario/form-usuario.component.html
+++ b/src/app/modulos/usuario/form-usuario/form-usuario.component.html
@@ -1,8 +1,7 @@
-
-  <!-- register.component.html -->
+<!-- register.component.html -->
 
 <div class="container m-2">
-  <h2>Registro</h2>
+  <h2 class="text-center m-5">Registro</h2>
   <form [formGroup]="registerForm" class="form" (ngSubmit)="crearUsuario()">
     <!-- Common Fields -->
     <div class="form-row">
@@ -61,7 +60,7 @@
   
     <!-- Paciente Specific Fields -->
     <div *ngIf="this.rol == 'paciente'" class="form-row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-6 m-2">
         <label for="obraSocial">Obra Social</label>
         <input type="text" id="obraSocial" formControlName="ObraSocial" class="form-control" required>
         <div *ngIf="registerForm.get('ObraSocial')?.invalid && registerForm.get('ObraSocial')?.touched">
@@ -71,48 +70,48 @@
     </div>
   
     <div *ngIf="this.rol == 'especialista'" class="form-row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-6 m-2">
         <label for="especialidad">Especialidad</label>
-        <select multiple [(ngModel)]="especialidadesSeleccionadas"  [ngModelOptions]="{standalone: true}" class="form-control" (ngModelChange)="onEspecialidadChange()">
-
-          <option *ngFor="let especialidad of especialidades" [value]="especialidad.especialidad">{{ especialidad.especialidad }}</option>
+        <select multiple [(ngModel)]="especialidadesSeleccionadas" [ngModelOptions]="{standalone: true}" class="form-control" (ngModelChange)="onEspecialidadChange()">
+          <option *ngFor="let especialidad of especialidades" [value]="especialidad">{{ especialidad }}</option>
         </select>
       </div>
-      <div class="form-group col-md-6" *ngIf="mostrarCampoNuevaEspecialidad" @enterAnimation>
+      <div class="form-group col-md-6 m-2" *ngIf="mostrarCampoNuevaEspecialidad">
         <label for="nuevaEspecialidad">Agregar nueva especialidad</label>
         <input id="nuevaEspecialidad" [(ngModel)]="nuevaEspecialidad" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="Nueva especialidad">
         <button type="button" class="btn btn-primary mt-2" (click)="agregarEspecialidad()">Agregar Especialidad</button>
       </div>
-
     </div>
   
     <div class="form-row">
-      <div class="form-group">
+      <div class="form-group col-md-6 m-2">
         <label for="imagen">Imagen de Perfil</label>
         <input type="file" id="imagen" (change)="onFileSelected($event)" formControlName="Imagen" class="form-control" required>
         <div *ngIf="registerForm.get('Imagen')?.invalid && registerForm.get('Imagen')?.touched">
           <small class="text-danger">Imagen de perfil es requerida.</small>
         </div>
       </div>
-    </div>
-    <div class="form-row">
-      <div *ngIf="this.rol == 'especialista'" class="form-group">
+      <div *ngIf="this.rol == 'especialista'" class="form-grou  p col-md-6 m-2">
         <label for="imagen2">Segunda imagen </label>
-        <input type="file" id="imagen2" (change)="onFile2Selected($event)" formControlName="Imagen2" class="form-control"  required>
+        <input type="file" id="imagen2" (change)="onFile2Selected($event)" formControlName="Imagen2" class="form-control" required>
         <div *ngIf="registerForm.get('Imagen2')?.invalid && registerForm.get('Imagen2')?.touched">
-          <small class="text-danger">Imagen de perfil son requeridas.</small>
+          <small class="text-danger">Segunda imagen de perfil es requerida.</small>
         </div>
       </div>
     </div>
-    @if(loading){
-      <spinner></spinner>
-    }@else{
-      <button type="submit" class="btn btn-primary mt-5">Registrar</button>
-    }
+    <ngx-recaptcha2 #captchaElem
+      [siteKey]="siteKey"
+      formControlName="recaptcha">
+    </ngx-recaptcha2>
+    <div class="form-row">
+ 
+      <div class="form-group col-md-12 text-center mt-3">
+        @if(!loading){
+          <button type="submit" class="btn btn-primary">Registrar</button> 
+        }@else {
+          <spinner></spinner>
+        }
+      </div>
+    </div>
   </form>
-  
 </div>
-
-
-
-
