--- a/src/app/modulos/usuario/user-card/user-card.component.css
+++ b/src/app/modulos/usuario/user-card/user-card.component.css
@@ -7,7 +7,18 @@
   display: flex;
   align-items: center; 
 }
-
+.container-botones {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; 
+  gap: 10px; 
+}
+.btn-sm{
+  width: 100%;
+}
+.container-botones .btn {
+  width: 100%; /* Esto asegura que los botones ocupen todo el ancho del contenedor */
+}
 .card-body {
   padding: 20px;
   flex: 1;
