--- a/src/app/modulos/welcome/welcome/welcome.component.css
+++ b/src/app/modulos/welcome/welcome/welcome.component.css
@@ -7,13 +7,24 @@ body, html {
   background-color: var(--background-color);
   color: var(--text-primary-color);
 }
+.logo{
+  width: 30vw !important;
+  height: 30vh !important;
+}
+
+.cuerpo-welcome{
+  display: flex;
+  width: 100%;
+  background-color: var(--background-color);
+}
 
 .welcome-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  width: 100%;
+  height: 80vh;
   text-align: center;
   background-color: var(--background-color);
 }
@@ -23,7 +34,10 @@ h1 {
   font-size: 3em;
   margin-bottom: 0.5em;
 }
-
+.titulos{
+  width: 50vw;
+  margin-left: 15vw;
+}
 p {
   color: var(--text-secondary-color);
   font-size: 1.2em;
@@ -32,7 +46,9 @@ p {
 
 .buttons {
   display: flex;
-  gap: 1em;
+  flex-direction: column;
+  gap: 2em;
+  width: 50vw;
 }
 
 .button {
